--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -190,40 +190,42 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:orientation="vertical"
             android:scrollbarAlwaysDrawVerticalTrack="true">
+
             <TextView
                 android:id="@+id/login_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:visibility="visible"
                 android:layout_marginTop="22dp"
+                android:layout_marginBottom="16dp"
                 android:gravity="center_horizontal"
                 android:text=""
                 android:textColor="#fff"
                 android:textSize="26sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="visible" />
 
             <ImageView
                 android:id="@+id/iv_strips"
                 android:layout_width="400dp"
                 android:layout_height="150dp"
                 android:layout_below="@+id/login_title"
-                android:layout_marginTop="30dp"
                 android:layout_marginLeft="30dp"
-                android:src="@drawable/glocometer"
+                android:layout_marginTop="30dp"
                 android:layout_marginRight="30dp"
-                android:padding="20dp"
-                android:textColor="@color/buttoncolor"
-                android:textSize="12sp"
-                android:scrollbars="vertical"
+                android:cursorVisible="false"
                 android:editable="false"
-                android:cursorVisible="false" />
+                android:padding="20dp"
+                android:scrollbars="vertical"
+                android:src="@drawable/glocometer"
+                android:textColor="@color/buttoncolor"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/display"
@@ -237,85 +239,90 @@
                 android:background="@drawable/orange"
                 android:cursorVisible="false"
                 android:editable="false"
-                android:padding="20dp"
-                android:text=""
                 android:gravity="center"
-                android:textAlignment="center"
+                android:padding="20dp"
                 android:scrollbars="vertical"
+                android:text=""
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
 
             <RelativeLayout
+                android:id="@+id/mainrel"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/display"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginRight="10dp"
                 android:elevation="4dp"
                 android:orientation="vertical"
-                android:padding="20dp"
-                android:id="@+id/mainrel">
+                android:padding="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
+                        android:text="Device:"
                         android:textColor="@color/buttoncolor"
-                        android:textSize="18sp"
-                        android:text="Device:"/>
+                        android:textSize="18sp" />
+
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:textSize="18sp"
                         android:id="@+id/textdevice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:text="NA"
                         android:textColor="@color/buttoncolor"
-                        android:text="NA"/>
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="30dp">
+                    android:layout_marginTop="30dp"
+                    android:orientation="vertical">
+
                     <Button
+                        android:id="@+id/btn_scan"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="2dp"
+                        android:background="@drawable/buttonshape"
+                        android:shadowColor="#A8A8A8"
+                        android:shadowDx="0"
+                        android:shadowDy="0"
+                        android:shadowRadius="5"
                         android:text="Scan"
                         android:textColor="#fff"
                         android:textSize="18sp"
-                        android:layout_marginRight="2dp"
+                        android:visibility="gone" />
+
+                    <Spinner
+                        android:id="@+id/spindevice"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:prompt="@string/device"
+                        android:spinnerMode="dialog" />
+
+                    <Button
+                        android:id="@+id/btnconnect"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="3dp"
                         android:shadowColor="#A8A8A8"
                         android:shadowDx="0"
                         android:shadowDy="0"
                         android:shadowRadius="5"
-                        android:onClick="scan"
-                        android:background="@drawable/buttonshape"/>
-                    <Spinner
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/spindevice"
-                        android:spinnerMode="dialog"
-                        android:prompt="@string/device"/>
-                    <Button
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
                         android:text="Connect"
                         android:textColor="#fff"
-                        android:textSize="18sp"
-                        android:id="@+id/btnconnect"
-                        android:shadowColor="#A8A8A8"
-                        android:layout_margin="3dp"
-                        android:shadowDx="0"
-                        android:shadowDy="0"
-                        android:shadowRadius="5"
-                        android:onClick="connect"/>
+                        android:textSize="18sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -325,83 +332,88 @@
                         <Button
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:text="Test"
-                            android:textColor="#fff"
-                            android:textSize="18sp"
-                            android:background="@drawable/buttonshape"
+                            android:layout_margin="3dp"
                             android:layout_weight="0.5"
+                            android:background="@drawable/buttonshape"
+                            android:onClick="test"
                             android:shadowColor="#A8A8A8"
                             android:shadowDx="0"
                             android:shadowDy="0"
-                            android:layout_margin="3dp"
                             android:shadowRadius="5"
-                            android:onClick="test"/>
+                            android:text="Test"
+                            android:textColor="#fff"
+                            android:textSize="18sp" />
+
                         <Button
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:text="Next"
-                            android:textColor="#fff"
-                            android:textSize="18sp"
-                            android:layout_weight="0.5"
-                            android:layout_marginRight="2dp"
                             android:layout_margin="3dp"
+                            android:layout_marginRight="2dp"
+                            android:layout_weight="0.5"
+                            android:background="@drawable/buttonshape"
+                            android:onClick="device_off"
                             android:shadowColor="#A8A8A8"
                             android:shadowDx="0"
                             android:shadowDy="0"
                             android:shadowRadius="5"
-                            android:background="@drawable/buttonshape"
-                            android:onClick="device_off"/>
+                            android:text="Next"
+                            android:textColor="#fff"
+                            android:textSize="18sp" />
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:paddingTop="10dp">
+
                         <Button
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:layout_weight="0.5"
+                            android:background="@drawable/buttonshape"
+                            android:onClick="readBatchCode"
+                            android:shadowColor="#A8A8A8"
+                            android:shadowDx="0"
+                            android:shadowDy="0"
+                            android:shadowRadius="5"
                             android:text="Read Batch Code"
                             android:textColor="#fff"
                             android:textSize="14sp"
-                            android:background="@drawable/buttonshape"
-                            android:layout_weight="0.5"
-                            android:layout_marginTop="2dp"
-                            android:shadowColor="#A8A8A8"
-                            android:shadowDx="0"
-                            android:shadowDy="0"
-                            android:visibility="gone"
-                            android:shadowRadius="5"
-                            android:onClick="readBatchCode"/>
+                            android:visibility="gone" />
+
                         <Button
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:text="Set Batch Code"
-                            android:textColor="#fff"
-                            android:textSize="14sp"
-                            android:background="@drawable/buttonshape"
-                            android:layout_weight="0.5"
                             android:layout_marginTop="2dp"
+                            android:layout_weight="0.5"
+                            android:background="@drawable/buttonshape"
+                            android:onClick="writeBatchCode"
                             android:shadowColor="#A8A8A8"
                             android:shadowDx="0"
                             android:shadowDy="0"
                             android:shadowRadius="5"
-                            android:onClick="writeBatchCode"/>
+                            android:text="Set Batch Code"
+                            android:textColor="#fff"
+                            android:textSize="14sp" />
                     </LinearLayout>
+
                     <Button
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:text="Read All Test"
-                        android:textColor="#fff"
-                        android:textSize="18sp"
-                        android:background="@drawable/buttonshape"
-                        android:layout_weight="0.5"
                         android:layout_marginTop="20dp"
+                        android:layout_weight="0.5"
+                        android:background="@drawable/buttonshape"
+                        android:onClick="readLastTest"
                         android:shadowColor="#A8A8A8"
                         android:shadowDx="0"
                         android:shadowDy="0"
                         android:shadowRadius="5"
-                        android:visibility="gone"
-                        android:onClick="readLastTest"/>
+                        android:text="Read All Test"
+                        android:textColor="#fff"
+                        android:textSize="18sp"
+                        android:visibility="gone" />
                 </LinearLayout>
 
             </RelativeLayout>
@@ -409,8 +421,6 @@
 
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
-
-
 
 
 </RelativeLayout>
